--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -2,6 +2,7 @@
     font-family: 'Poppins', sans-serif;
     max-width: 1280px;
     margin: 0 auto;
+    background-color: #f5f5f5
     background-image: url(/projeto-listagem-pokemon/src/imagens/fundo.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,6 +12,7 @@
  body.modo-escuro{
     background-image: url(/projeto-listagem-pokemon/src/imagens/fundo-noite.png);
     color: #f5f5f5;
+    background-color: #333333;
  }
 
  header{
