--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -2,7 +2,7 @@
     font-family: 'Poppins', sans-serif;
     max-width: 1280px;
     margin: 0 auto;
-    background-color: #f5f5f5
+    background-color: #f5f5f5;
     background-image: url(/projeto-listagem-pokemon/src/imagens/fundo.png);
     background-repeat: no-repeat;
     background-size: cover;
