--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -3,14 +3,14 @@
     max-width: 1280px;
     margin: 0 auto;
     background-color: #f5f5f5;
-    background-image: url(/projeto-listagem-pokemon/src/imagens/fundo.png);
+    background-image: url(https://i.pinimg.com/originals/93/98/94/9398944b931f51d4ab0a8e92f44ca452.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: #333333;
  }
 
  body.modo-escuro{
-    background-image: url(/projeto-listagem-pokemon/src/imagens/fundo-noite.png);
+    background-image: url(https://cdn.wallpapersafari.com/47/77/4LxYuy.png);
     color: #f5f5f5;
     background-color: #333333;
  }
