--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -2,7 +2,7 @@
     font-family: 'Poppins', sans-serif;
     max-width: 1280px;
     margin: 0 auto;
-    background-color: #f5f5f5;
+    background-color: #5e5b5bad;
     background-image: url(https://i.pinimg.com/originals/93/98/94/9398944b931f51d4ab0a8e92f44ca452.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,8 +11,10 @@
 
  body.modo-escuro{
     background-image: url(https://cdn.wallpapersafari.com/47/77/4LxYuy.png);
+    background-color: #212121;
     color: #f5f5f5;
-    background-color: #333333;
+    background-repeat: no-repeat;
+    background-size: cover;
  }
 
  header{
